--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,7 @@
     height: 80vh;
     background-color: rgba(229, 84, 115, 0.10);
     display: flex;
-    /* align-items: center; */
-     justify-content: center; */
-    /* padding: 0px 200px; */
-
+     justify-content: center; 
 }
 
 .headding {
@@ -21,8 +18,6 @@
     font-weight: 700;
     padding-top: 30px;
     
-
-
 }
 
 .peragrapth {
@@ -47,9 +42,7 @@
 }
   
 .img-one{
-    width: 600px;
-    height: 750px;
-    margin: 32px;
+    height: 100%;
 } 
 
 .text-part{
