--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     height: 80vh;
     background-color: rgba(229, 84, 115, 0.10);
     display: flex;
-     justify-content: center; 
+    justify-content: center;
 }
 
 .headding {
@@ -17,14 +17,13 @@
     font-size: 80px;
     font-weight: 700;
     padding-top: 30px;
-    
+
 }
 
 .peragrapth {
     color: rgba(39, 39, 39, 0.60);
     font-family: Lato;
-    font-size: 15px;
-    font-style: normal;
+    font-size: 18px;
     font-weight: 400;
     line-height: 30px;
     padding: 30px 0px;
@@ -32,7 +31,7 @@
 
 .header-btn {
     display: inline-flex;
-    padding: 20px 40px; 
+    padding: 20px 40px;
     align-items: flex-start;
     gap: 10px;
     border-radius: 8px;
@@ -40,15 +39,108 @@
     color: white;
     border: none;
 }
-  
-.img-one{
-    height: 100%;
-} 
 
-.text-part{
-    width: 1000px;
-    align-items: center;
-    padding: 150px 100px;
+.headding-img {
+    height: 94%;
+    padding-top: 50px;
 }
 
+.text-part {
+    width: 1000px;
+    align-items: center;
+    margin: auto 0;
+}
 
+.feature {
+    text-align: center;
+    margin: 150px;
+}
+
+.feature-items {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 160px;
+    padding: 0px 320px;
+    height: 45vh;
+}
+
+.flower1 {
+    width: 350px;
+    height: 450px;
+    flex-shrink: 0;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+    padding: 20px 50px;
+    padding-bottom: 0px;
+
+
+}
+
+.img-one {
+    width: 300px;
+    height: 400px;
+    margin-top: 50px;
+    margin-left: 20px;
+}
+
+.flower2 {
+    background: rgba(5, 151, 160, 0.15);
+    width: 350px;
+    height: 450px;
+    flex-shrink: 0;
+    border-radius: 300px 300px 0px 0px;
+    padding: 20px 50px;
+    padding-bottom: 0px;
+
+
+}
+
+.img-two {
+    margin-top: 50px;
+
+}
+
+.flower3 {
+    background: rgba(71, 125, 17, 0.15);
+    width: 350px;
+    height: 450px;
+    flex-shrink: 0;
+    border-radius: 300px 300px 0px 0px;
+    padding: 20px 50px;
+    padding-bottom: 0px;
+}
+
+.img-three {
+    height: 450px;
+    margin-left: 25px;
+}
+
+.feature-heading {
+    color: #272727;
+    text-align: center;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.feature-peragraph {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-top: 10px;
+}
+
+.flowers-name {
+    display: flex;
+    padding: 0px 180px;
+    justify-content: space-evenly;
+    align-items: center;
+    text-decoration: underline;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+   
+}
