--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,14 @@
 }
 
 .headding-img {
-    height: 94%;
-    padding-top: 50px;
+    height: 100%;
+
+}
+
+.image-part {
+    justify-content: center;
+    align-items: center;
+
 }
 
 .text-part {
@@ -59,8 +65,8 @@
 .feature-items {
     display: flex;
     justify-content: space-evenly;
-    padding-bottom: 160px;
-    padding: 0px 320px;
+    /* padding-bottom: 160px; */
+    padding: 0px 250px;
     height: 45vh;
 }
 
@@ -135,19 +141,18 @@
 
 .flowers-name {
     display: flex;
-    padding: 0px 180px;
-    justify-content: space-evenly;
-    align-items: center;
+    padding: 60px 260px;
+    /* justify-content: space-evenly; */
+    justify-content: space-around;
     text-decoration: underline;
-    font-size: 24px;
-    font-style: normal;
+    font-size: 22px;
     font-weight: 700;
+    text-align: center;
 }
 
 /* feature-two style section */
 .feature-two {
     display: flex;
-
     border: 2px solid black;
     align-items: center;
     margin: 100px 350px;
@@ -181,7 +186,7 @@
     padding: 250px;
 }
 
-.hot-heading{
+.hot-heading {
     color: #272727;
     font-size: 45px;
     font-weight: 700;
@@ -198,11 +203,42 @@
 
 }
 
-.btn{
+.btn {
     margin: 5px 220px;
 }
-    
-.off{
+
+.off {
     color: #E55473;
 
+}
+
+/* instagram part */
+.insta-heading {
+    color: #272727;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 700;
+    padding-top: 100px;
+}
+
+.insta-destription {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding: 10px;
+}
+
+.insta-pictures {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 50px;
+
+
+}
+
+.insta-img {
+    width: 342px;
+    height: 396px;
 }
